# blocus-engine-cs-630

./: LICENSE  Makefile  README.md
backend/: .coverage  .dockerignore  .gitignore  Dockerfile  Makefile  PROTOCOL.md  docker-compose.yml  pyproject.toml
backend/example/: dev_server.py  engine_usage.py  example_simulation.py  mode_duo.py  mode_three_player_shared.py  mode_two_player_classic.py  visual_simulation.py  websocket_simulation.py
backend/src/: blocus_engine.pyi
backend/src/blocus_backend/: app.py  engine_adapter.py  event_bus.py  main.py  repository.py  schemas.py  service.py  websocket.py
backend/tests/: conftest.py  test_engine_adapter.py  test_event_bus.py  test_health.py  test_repository.py  test_service_classic.py  test_websocket_classic.py  typing_contract_smoke.py
engine/: .dockerignore  .gitignore  Cargo.toml  Makefile  serialize.py
engine/crates/blocus-core/: Cargo.toml
engine/crates/blocus-core/src/: color.rs  ids.rs  lib.rs  transposition.rs
engine/crates/blocus-core/tests/: api_contract_test.rs  api_state_event_coverage_test.rs  apply_place_test.rs  board_constants_test.rs  board_index_test.rs  board_mask_shift_test.rs  board_mask_test.rs  board_state_tests.rs  board_symmetry_test.rs  check_duo_ruleset.rs  color_test.rs  config_test.rs  duo_test.rs  engine_facade_test.rs  error_test.rs  game_state_test.rs  hash_test.rs  health_test.rs  ids_test.rs  movegen_test.rs  pass_test.rs  piece_inventory_test.rs  piece_repository_static_test.rs  piece_repository_test.rs  placement_test.rs  player_slots_test.rs  property_invariants_test.rs  rule_expansion_test.rs  scoring_regression.rs  scoring_tests.rs  shape_bitmap_test.rs  test_board_and_piece_api.rs  test_edge_cases.rs  test_ruleset_logic.rs  transposition_test.rs  turn_state_test.rs
engine/crates/blocus-python/: Cargo.toml
engine/crates/blocus-python/python_tests/: test_apply_place.py  test_board_and_piece_api.py  test_commands.py  (+10 more)
(+99 files in other folders)
