[project]
name = "blocus-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tobias Friedrich", email = "unhbg@student.kit.edu" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
]

[project.scripts]
blocus-backend = "blocus_backend:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=blocus_backend",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true